# CarNN

./: .gitignore  CMakeLists.txt  body.cpp  body.hpp  main.cpp  maths.hpp  randomutil.cpp  randomutil.hpp  simulationunit.cpp  simulationunit.hpp  world.cpp  world.hpp
entities/: car.cpp  car.hpp  checkpoint.cpp  checkpoint.hpp  wheel.cpp  wheel.hpp
include/carnn/: pch.hpp
include/carnn/neural/: activationmethod.hpp  fwd.hpp  network.hpp  neuron.hpp  neuronid.hpp  synapse.hpp  synapseid.hpp  types.hpp  visualizer.hpp
include/carnn/sim/: fwd.hpp  individual.hpp  simulationunit.hpp  world.hpp
include/carnn/sim/entities/: body.hpp  car.hpp  checkpoint.hpp  fwd.hpp  wheel.hpp
include/carnn/training/: mutator.hpp  settings.hpp
include/carnn/util/: line.hpp  maths.hpp  random.hpp
neural/: activationmethod.cpp  activationmethod.hpp  axon.cpp  axon.hpp  forwardsynapse.cpp  forwardsynapse.hpp  forwardsynapseidentifier.hpp  ga.cpp  ga.hpp  individual.hpp  mutator.cpp  mutator.hpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  neuronid.hpp  neuronidentifier.hpp  synapse.cpp  synapse.hpp  synapseid.hpp  visualizer.cpp  visualizer.hpp
src/: body.cpp  main.cpp  maths.hpp  simulationunit.cpp  world.cpp
src/carnn/: main.cpp
src/carnn/neural/: network.hpp  neuron.cpp  visualizer.hpp
src/carnn/sim/: simulationunit.hpp  world.cpp  world.hpp
src/carnn/sim/entities/: body.cpp  checkpoint.cpp  wheel.hpp
src/carnn/training/: mutator.cpp  mutator.hpp
src/carnn/util/: random.cpp
src/entities/: car.hpp  checkpoint.cpp  checkpoint.hpp
src/neural/: activationmethod.cpp  mutator.hpp  network.cpp  network.hpp  neuron.cpp  synapse.hpp  synapseid.hpp  types.hpp  visualizer.cpp
src/sim/: simulationunit.cpp  world.cpp
src/sim/entities/: body.cpp  car.cpp  checkpoint.cpp  wheel.cpp
src/training/: mutator.cpp  settings.cpp
src/util/: random.cpp
workdir/: map.json  mutator.json  race.json
